# sfblib

./: CMakeLists.txt  \  b.sh  build.sh  readme.md
examples/: alloc.c  circle.c  draw_rect.c  fill.c  main  move_rect.c  rect.ppm  rectmoved.ppm  sfb.h  spr_loader.c
include/: sfb.h  sfb_allocator.h  sfb_camera.h  sfb_fb_def.h  sfb_flags.h  sfb_framebuffer.h  sfb_internal.h  sfb_lighting.h  sfb_mat.h  sfb_mat_def.h  sfb_pix_def.h  sfb_rgba.h  sfb_scale.h  sfb_threads.h
sfblib/: 2dmat.c  allocator.c  buf_write.c  camera.c  framebuffer.c  framebuffer_write.c  lighting.c  matrices.c  mem.c  rect.c  rgba.c  scale.c  sfb.c  sfb.h  threads.c  utils.c
src/: sfb.c  sfb.h
tests/: \  a.out  alloc.c  blend  blend.c  blend.ppm  camera.c  draw_rect.c  l  lighting.c  main  move_rect.c  scale.c  sdl2  sdl2.c  sdl2_threaded.c  spr_loader.c  t  thread  threads  threads.c
tools/: image_conv.c  image_write.c
